--- a/backend/weather-api/Dockerfile
+++ b/backend/weather-api/Dockerfile
@@ -1,12 +1,12 @@
-# Stage 1: Build the app with Maven
-FROM maven:3.8.7-jdk-17 AS build
+# Stage 1: Build with Maven + JDK 8
+FROM maven:3.5.2-jdk-8 AS build
 WORKDIR /app
 COPY pom.xml .
 COPY src ./src
 RUN mvn clean package -DskipTests
 
-# Stage 2: Create the final image to run the app
-FROM eclipse-temurin:17-jdk
+# Stage 2: Run with JDK 8
+FROM openjdk:8-jdk-alpine
 WORKDIR /app
-COPY --from=build /app/target/weather-api-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=build /app/target/your-app.jar app.jar
 CMD ["java", "-jar", "app.jar"]
